# GhostSDK

./: .gitignore  IK_controller_client.py  LICENSE.txt  README.md  data_analysis.ipynb  data_analysis.py  pull_spirit.sh  push_spirit.sh  research_note.md  safety_enforcer.py  shielding_command_client.py  shielding_server.py  test.py  test_mblink_data_unpack.py
SDK/mblink/: .gitignore  CMakeLists.txt  IK_controller_client.py  IK_controller_client_withStateFeedbackZed.py  IK_controller_server.py  IK_controller_test.py  README.md  data_analysis.ipynb  experiment_2.ipynb  force_analyze_experiment_1.ipynb  get_goal_box_pos.py  joint_position_control.py  mavudptest.py  model_downgrade.py  model_downgrade_refactor.py  naive_safety_enforcer.py  safety_enforcer.py  shielding_gameplay_client.py  shielding_serial_client.py  shielding_server.py  shielding_server_autonomous.py  shielding_server_noZ.py  shielding_server_rollout.py  shielding_server_rollout_autonomous.py  shielding_server_rollout_noZ.py  shielding_server_testSafetyOnly.py  shielding_vicon_client.py  shielding_vicon_fake_client.py  test_gameplay_rollout_client.py  test_gameplay_rollout_client_2.py  test_naive_safety_enforcer.py  test_robot_localization.py  test_safety_enforcer.py  test_serial.py  test_vicon_pose.py  test_zed_pose.py  upstream_script.py
SDK/mblink/RARL/: base_sac.py  base_zs_training.py  iter_best_response.py  model.py  naive_rl.py  naive_zs_rl.py  sac_adv.py  sac_mini.py  utils.py
SDK/mblink/agent/: __init__.py  base_block.py  base_training.py  isaacs.py  model.py  neural_network.py  replay_memory.py  sac.py  sac_br.py  scheduler.py
SDK/mblink/include/mblink/: app_interface.hpp  data_dicts.hpp  mblink_protocol.hpp  mblink_socket.hpp
SDK/mblink/inverse_kinematics/: gaitPlanner.py  inverse_kinematics_controller.py  kinematic_model.py
SDK/mblink/modemgr/: modemgr.hpp  modemgr_client.cpp  modemgr_client.hpp
SDK/mblink/src/: app_interface.cpp  data_dicts.cpp  mblink_protocol.cpp  mblink_socket.cpp
SDK/mblink/train_result/spirit_isaacs_avoidonly_f5_newStateDef/spirit_isaacs_avoidonly_f5_newStateDef_05/: config.yaml
SDK/mblink/train_result/spirit_isaacs_avoidonly_f5_newStateDef_pretrained/spirit_isaacs_avoidonly_f5_newStateDef_pretrained_05/: config.yaml
SDK/mblink/train_result/spirit_isaacs_binary_f5_softmax_newStateDef_pretrained/spirit_isaacs_binary_f5_softmax_newStateDef_pretrained_05/: config.yaml
SDK/mblink/train_result/spirit_isaacs_reachavoid_f5_newStateDef_pretrained/spirit_isaacs_reachavoid_f5_newStateDef_pretrained_05/: config.yaml
SDK/mblink/train_result/spirit_isaacs_reachavoid_f5_pretrained_newStateDef2/spirit_isaacs_reachavoid_f5_pretrained_newStateDef2_05/: config.yaml
SDK/mblink/train_result/spirit_isaacs_reachavoid_f5_pretrained_newStateDef2_mirror/spirit_isaacs_reachavoid_f5_pretrained_newStateDef2_mirror_05/: config.yaml
SDK/mblink/train_result/spirit_naive_binary_f5_newStateDef/spirit_naive_binary_f5_newStateDef_05/: config.yaml
SDK/mblink/train_result/test_spirit_refactor/test_bust-safety-2/: config.yaml  (+1 more)
SDK/mblink/utils/: dstb.py  eval.py  safety_filter.py  train.py  utils.py  visualization.py  zonoreach.py
ghost_description/: CMakeLists.txt  LICENSE  README.md  package.xml
ghost_description/meshes/Spirit40/decimated/: Spirit40_Body_Mesh_transformed_decimated.stl  Spirit40_Hip_Module_transformed_decimated.stl  Spirit40_Lower_Leg_transformed_decimated.stl  Spirit40_Upper_leg_transformed_decimated.stl
ghost_description/meshes/Vision60_V3/: Hip_Pod_Assembly.stl  Hip_Pod_Assembly_Mirrored.stl  Leg_Assembly.stl  Leg_Assembly_Mirrored.stl
ghost_description/meshes/Vision60_V3/decimated/: Frame.STL  Hip_Pod_Assembly.stl  Hip_Pod_Assembly_Mirrored.stl  Leg_Assembly.stl  Leg_Assembly_Mirrored.stl  Lower_Leg_Assembly.stl
ghost_description/meshes/Vision60_V4/: rgb_cam.STL
ghost_description/meshes/Vision60_V4/decimated/: V4_Lower_leg_transformed_decimated.stl  V4_Upper_leg_mirrored_transformed_decimated.stl  V4_Upper_leg_transformed_decimated.stl  V4_frame_transformed_decimated.stl  V4_hip_transformed_decimated.stl
ghost_description/meshes/Vision60_V5/decimated/: body_decimated.stl  left_upper_decimated.stl  lower_decimated.stl  pod_decimated.stl  right_upper_decimated.stl
ghost_description/sdf/: dock.sdf  spirit40.sdf  vision60.sdf  vision60_updated.sdf
ghost_description/urdf/: adi_rgb_enclosure.urdf.xacro  misc_constants.urdf.xacro  spirit40_gaz.urdf.xacro  tof_sensor.urdf.xacro  vision60.urdf.xacro  vision60_body_sensors.urdf.xacro  vision60_gazebo_sensors.urdf.xacro  vision60_leg_macro.urdf.xacro  vision60_macro.urdf.xacro
ghost_description/urdf/V3/: vision60_3.8_2dt_sensorhead.urdf.xacro  vision60_3.8_composite.urdf.xacro  vision60_3.8_macro.urdf.xacro  vision60_3.8_sensorhead.urdf.xacro  vision60_3.8_t265_sensorhead.urdf.xacro  vision60_v3_sensorhead.urdf.xacro  vision60_v3_t265_2pmd_sensorhead.urdf.xacro  vision60v3.xacro
ghost_description/urdf/V4/: body.txt  lower_leg.txt  pod.txt  sw_inertia_tensors.xacro  upper_leg.txt  vision60_v4_composite.urdf.xacro  vision60_v4_d435i_sensorhead.urdf.xacro  vision60_v4_sensorhead_opt_module.urdf.xacro  vision60_v4_t265_2pmd_sensorhead.urdf.xacro  vision60v4.xacro
ghost_gazebo/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md  gazebo_walk.py  package.xml
ghost_gazebo/config/: interactive.yaml  interactive_spirit.yaml
ghost_gazebo/docker/: Dockerfile  docker_clean.bash  docker_enable_waypoint.bash  docker_sit.bash  docker_stand.bash  docker_test.bash  docker_walk.bash  ghost_sim_entrypoint.sh  install_dependencies.sh  run_ghost_sim.bash  run_sim.sh
ghost_gazebo/launch/: spirit40_control.yaml  spirit40_gazebo.launch  spirit40_multi.launch  spirit40_spawn.launch  vision60_gazebo.launch  vision60_multi.launch  vision60_spawn.launch
ghost_gazebo/rviz/: docker_gazebo.rviz
ghost_gazebo/src/: link_states_broadcaster.cpp
ghost_gazebo/worlds/: deeper_stairs_test.world  ghost_baylands.world  ghost_simple.world  person_actor.world  sensor_test.world  stair_test_arena.world  stairs_test.world
(+92 files in other folders)
