<?xml version="1.0"?>
<package format="2">
    <name>ghost_description</name>
    <version>0.0.0</version>
    <description>URDF and STLs for the Ghost Quadruped Platforms</description>

    <maintainer email="adarsh@ghostrobotics.io">Adarsh</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
